--- a/client/src/langs/ru.json
+++ b/client/src/langs/ru.json
@@ -6,5 +6,32 @@
         "projects": "Проекты",
         "contact": "Контакт",
         "request": "Оставьте заявку"
+    },
+    "request": {
+        "title": "Оставьте заявку",
+        "text": "Заполните форму ниже, и мы свяжемся с вами.",
+        "name": "Ваше имя",
+        "phone": "Ваш номер телефона",
+        "telegram": "Telegram @username (необязательно)",
+        "type": "Как бы вы хотели, чтобы мы с вами связались?",
+        "via": {
+            "phone": "По телефону",
+            "telegram": "Через Телеграм"
+        },
+        "submit": "Отправлять",
+        "success": "Ваше сообщение успешно отправлено, и мы свяжемся с вами в ближайшее время.",
+        "fill": "Пожалуйста, заполните обязательные поля.",
+        "telegram_error": "Telegram @username введено неверно",
+        "telegram_via_error": "Введите свое @username для общения через Telegram."
+    },
+    "intro": {
+        "stack": "Fullstack MERN Developer",
+        "title": "SAIDNET",
+        "text": {
+            "t1": "Ваше воображение —",
+            "t2": "оживает в моих работах"
+        },
+        "call": "Вызов",
+        "request": "Оставьте заявку"
     }
 }
