--- a/client/src/langs/ru.json
+++ b/client/src/langs/ru.json
@@ -33,5 +33,13 @@
         },
         "call": "Вызов",
         "request": "Оставьте заявку"
+    },
+    "about": {
+        "title": "Обо мне",
+        "text": "Я FullStack JavaScript-разработчик.",
+        "text2": "У меня многолетний опыт работы в области frontend и backend. Мои основные области знаний — React.js, Node.js и MongoDB. В каждом проекте я уделяю большое внимание качеству, точности и функциональности. Моя цель — создавать современные, безопасные и удобные веб-приложения."
+    },
+    "skills": {
+        "title": "Навыки"
     }
 }
